# personal-website

./: .cursorrules  Cargo.toml  LICENSE
public/: index.html  scripts.js
src/: main.rs
src/application/: mod.rs  services.rs
src/domain/: models.rs
src/infrastructure/: mod.rs
src/infrastructure/handlers/: bio.rs  blog.rs  home.rs  mod.rs  services.rs
src/infrastructure/repositories/: mock.rs
src/ports/: mod.rs  repositories.rs
templates/: base.html  bio.html  blog.html  blog_post.html  home.html  services.html
