[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
chrono = "0.4"
async-trait = "0.1"
pulldown-cmark = "0.9"
html-escape = "0.2"

[build-dependencies]
askama = "0.12"
